Fix scrollbar

--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -6,8 +6,8 @@
     flex-direction: column;
     background: rgba(var(--black-monochrome),0.85);
     box-shadow: inset -0.094em 0 0 rgb(var(--dark-accent)), 0 0.188em 0.375em rgba(0,0,0,0.16), 0 0.188em 0.375em rgba(0,0,0,0.23), 0 0 0.0625em 0 #888880 inset, 0 0 0.0625em 0 #888880, inset 0 -0.625em 0 0 var(--dark-accent);
-    flex-basis: --sidebar-width-on-desktop;
-    min-width: --sidebar-width-on-desktop;
+    flex-basis: var(--sidebar-width-on-desktop);
+    min-width: var(--sidebar-width-on-desktop);
     flex-shrink: 0;
     padding: 0 0 6rem 0;
     margin: calc(var(--offset-from-page-top) - 0.1rem) 0 1.5rem -1vw;
@@ -16,6 +16,11 @@
     top: 0px;
     max-height: 100vh;
     overflow: auto;
+}
+
+#side-bar::-webkit-scrollbar-track
+{
+  background:rgba(var(--white-monochrome),0.5);
 }
 
 #side-bar img {
@@ -52,7 +57,7 @@
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
-    flex-shrink: 2;
+    flex-shrink: 0;
 }
 
 #side-bar .side-area {
